src/css/story/story.styl
/* CUSTOM STORY STYLE */
body 
    background linear-gradient(180deg, #8087C4 2.5%, #BCA8CC 17.5%, #DBB0C2 32.5%, #E5A7AA 50%, #DBB0C2 67.5%, #BCA8CC 82.5%, #8087C4 97.5%);

.grid
    display flex 
    flex-wrap wrap 
    .cam 
        width 250px
        margin 1rem
        p
            margin 0
            font-family $national

.map 
    display flex 
    flex-direction row
    margin 3rem auto 0
    position relative
    max-width 1200px
    pointer-events none
    padding-top 7rem
    padding-bottom 4rem
    height 100%

    .intro 
        text-align left 

        .sig 
            font-style italic

    .clouds__base 
        width 100%
        max-height 356px
        height 40%
        background-image url('assets/images/clouds-baseline.png')
        position fixed 
        left 0 
        bottom 0
        z-index 2000
        opacity 1 
        transition opacity 300ms ease-in-out
        +mq('bp-5')
            height 30%
        &.is-hidden 
            opacity 0
            transition opacity 300ms ease-in-out
        // opacity 0.9



    .islands 
        display flex 
        flex-direction column
        margin 0 auto
        padding 0 0.5rem
        // max-width 1300px


        .g-island 
            display flex 
            flex-direction row
      
            +mq('bp-5')
                &:nth-child(even)
                    margin-top -5em

        .annotation--desktop
            display none
            +mq('bp-5')            
                display grid
                grid-template-columns 1
                margin-left 4rem
                width 30%
                .g-anno 
                    opacity 0.3
                    &.in-focus 
                        opacity 1
                h3 
                    font-weight bold 
                    font-family $national
                    text-transform capitalize
                    set-type-size('x-large')
                    pointer-events all
                    cursor pointer
                    margin 0

                ul 
                    
                    li
                        pointer-events all
                        set-type-size('root')
                        font-family $national-narrow
                        font-weight normal
                        cursor pointer
                        line-height 1
                        display flex 
                        align-items center
                        // list-style-image url('assets/images/video.svg')
                        background-position top 10px
                        &.selected
                            font-weight bold 
                        .video--icon
                            margin-left 0.5rem
                            margin-top 2px
                            transform scale(0.5)
                            opacity 1
                            fill $primary
                            &.is-hidden 
                                opacity 0


        .tile 
            position relative            
            display grid 
            // grid-template-columns repeat(2, 1fr)
            grid-column-gap -5px
            overflow hidden
            margin-top 0
            pointer-events none
            z-index auto
            width 100%
            
            // max-width 700px
            +mq('bp-5')
                min-width 70%
                width 70%
                max-width 70%
                grid-template-columns repeat(3, 1fr)

            // grid-row-gap 205px
            // &__R2
            //     grid-template-rows 17.8% 1fr 17.8% 1fr 17.8%

            &:nth-child(even)
                transform translate(0, 0)
            .exhibit 
                display inline-block
                padding 0
                margin 0 auto
                max-width 1228px
                pointer-events none
                
                &-top
                    z-index 10
            .cam__display
                width 75%
                height auto
                display block
                pointer-events auto
                object-fit cover
                // filter saturate(0.25)
                // transition filter, transform 300ms ease-in-out
                cursor pointer

                // &.in-focus
                //     filter saturate(1)
                //     transition filter, transform 300ms ease-in-out


        +mq('bp-5')
            .tile:nth-child(even)
                transform translate(0, 100px)

